<resources>
    <string name="app_name">Comedoria Da Tia</string>
    <string name="LogoComedoria">Logo da Comedoria Da Tia</string>
    <string name="JaPossuiConta">Já possui uma conta?</string>
    <string name="Entrar">Entrar</string>
    <string name="NaoPossuiConta">Não possui uma conta?</string>
    <string name="Criar">Criar</string>
    <string name="EsqueceuSenha">Esqueceu sua senha?</string>
    <string name="Recuperar">Recuperar</string>
    <string name="RecuperacaoSenha">Recuperação de Senha</string>
    <string name="HintNome">Nome</string>
    <string name="HintRA">RA</string>
    <string name="HintTelefone">Telefone</string>
    <string name="HintEmail">E-mail</string>
    <string name="HintSenha">Senha</string>
    <string name="HintConfirmarSenha">Confirme sua Senha</string>
    <string name="BotaoComecar">Começar</string>
    <string name="BotaoCadastro">Cadastrar</string>
    <string name="BoasVindas">Olá! Bem vindo(a) ao meu App.</string>
    <string name="IconeVoltar">Ícone para voltar a tela anterior</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="userLogo">Logo do usuário</string>
    <string name="userName">Nome do usuário</string>
    <string name="userContact">usercontact@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AboutFragment">About Fragment</string>
    <string name="HomeFragment">Home Fragment</string>
    <string name="SettingsFragment">Settings Fragment</string>
    <string name="ShareFragment">Share Fragment</string>
    <string name="Erro">Erro</string>
    <string name="Descricao">Descrição curta</string>
    <string name="NomePrato">Nome do prato</string>
    <string name="DetalhesProduto">Detalhes do produto</string>
    <string name="PrecoProduto">R$ 0,00</string>
    <string name="InfsAdicionais">  •  ⭐ 4.7  •  20 min</string>
</resources>
