<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgreen"
    tools:context=".PasswordRecovery">

    <ImageView
        android:id="@+id/logoComedoria"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/LogoComedoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_comedoria_da_tia" />

    <TextView
        android:id="@+id/tvRecuperacaoSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecuperacaoSenha"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoComedoria" />

    <EditText
        android:id="@+id/emailRecuperacao"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_edittext"
        android:gravity="center_vertical"
        android:hint="@string/HintEmail"
        android:inputType="textEmailAddress"
        android:maxLength="100"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecuperacaoSenha"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnRecuperarSenha"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/lightgreen"
        android:text="@string/Recuperar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRecuperacao"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/setaVoltar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/IconeVoltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_voltar" />

</androidx.constraintlayout.widget.ConstraintLayout>
