<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/logoComedoria"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/LogoComedoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_comedoria_da_tia" />

    <EditText
        android:id="@+id/editTextRA"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:autofillHints=""
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/HintRA"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoComedoria" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/HintSenha"
        android:inputType="textPassword"
        android:maxLength="8"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRA" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/BotaoComecar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>
